# Seisin

./: .gitmodules  .guidelines-config  CLAUDE.md  Cargo.toml  GUIDELINES.md  README.md
crates/seisin-client/: Cargo.toml
crates/seisin-client/src/: lib.rs
crates/seisin-core/: Cargo.toml
crates/seisin-core/src/: authority.rs  cache.rs  datum.rs  lib.rs  sk.rs  store.rs
crates/seisin-gossip/: Cargo.toml
crates/seisin-gossip/src/: clock.rs  failure_detector.rs  lib.rs  wire.rs  (+2 more)
crates/seisin-node/: Cargo.toml
crates/seisin-node/src/: collation.rs  config.rs  gossip_client.rs  gossip_server.rs  gossip_state.rs  index_handler.rs  lib.rs  main.rs  peer_link.rs  pool.rs  server.rs  worker.rs
crates/seisin-node/tests/: integration_crash_during_collation.rs  integration_cross_node_collation.rs  integration_cross_node_wound_wait.rs  integration_gossip_failure_detection.rs  integration_multi_node_routing.rs  integration_op_collation.rs  integration_proactive_lock_release.rs  integration_wire_protocol.rs  integration_wound_wait.rs
crates/seisin-ops/: Cargo.toml
crates/seisin-protocol/: Cargo.toml
crates/seisin-ring/: Cargo.toml
crates/seisin-storage/: Cargo.toml
crates/seisin-types/: Cargo.toml
crates/seisin-types/src/: client.rs  encoding.rs  field.rs  lb.rs  lb_kind.rs  lib.rs  rk_index.rs  rk_kind.rs  schema.rs  sk_index.rs  typed_context.rs  typed_write.rs
crates/seisin-types/tests/: integration_automatic_index_maintenance.rs  integration_lb_boards.rs  integration_rk_leaderboard.rs  integration_typed_write_client.rs
docs/superpowers/: PROGRESS.md
(+38 files in other folders)
