[package]
name = "seisin-node"
version = "0.1.0"
edition = "2021"

[dependencies]
seisin-core = { path = "../seisin-core" }
seisin-protocol = { path = "../seisin-protocol" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
ron = "0.8"
seisin-ring = { path = "../seisin-ring" }
seisin-gossip = { path = "../seisin-gossip" }

[dev-dependencies]
seisin-client = { path = "../seisin-client" }
